# LinuxApplicationDevelopment2022

./: README.md
01_GitBuildReq/: hello.c
02_TerminalProject/: Makefile  Show.c
03_Multifile/: Makefile  const.c
04_Text/: cat.txt  randomize.sh
05_Debugging/: Makefile  range.c  test1.gdb  test1.ref  test2.gdb  test2.ref
07_TracingFencing/: Makefile  move.c  protect.c
09_I18n/: CMakeLists.txt  I18n.c  I18n.po
11_Testing/: CMakeLists.txt  buf.h  tests.c
12_Documenting/: CMakeLists.txt  I18n.c  I18n.po  readme.md
12_Documenting/man/: I18n.6
